main html template added. main css styles added.

--- a/apps/shop/templates/store.html
+++ b/apps/shop/templates/store.html
@@ -1,1 +1,21 @@
-<h3>store</h3>
+{% extends 'main.html' %}
+{% load static %}
+{% block content %}
+    <div class="row">
+        <div class="col-lg-4">
+            <div class="box-element product">
+
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="box-element product">
+
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="box-element product">
+
+            </div>
+        </div>
+    </div>
+{% endblock content %}
