--- a/apps/shop/templates/store.html
+++ b/apps/shop/templates/store.html
@@ -3,19 +3,23 @@
 {% block content %}
     <div class="row">
         <div class="col-lg-4">
+            <img class="thumbnail" src="{% static 'images/640x360.png' %}" alt="">
             <div class="box-element product">
-
+                <h6><strong>Product</strong></h6>
             </div>
         </div>
         <div class="col-lg-4">
+            <img class="thumbnail" src="{% static 'images/640x360.png' %}" alt="">
             <div class="box-element product">
-
+                <h6><strong>Product</strong></h6>
             </div>
         </div>
         <div class="col-lg-4">
+            <img class="thumbnail" src="{% static 'images/640x360.png' %}" alt="">
             <div class="box-element product">
-
+                <h6><strong>Product</strong></h6>
             </div>
         </div>
+        
     </div>
 {% endblock content %}
