--- a/apps/shoppingcart/templates/cart.html
+++ b/apps/shoppingcart/templates/cart.html
@@ -1,6 +1,49 @@
 {% extends 'main.html' %}
 {% load static %}
 {% block content %}
-    <h3>cart</h3>
+    
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="box-element">
+                <a class="btn btn-outline-dark" href="{% url 'store' %}"> &#x2190; Regresar a la tienda</a>
+                <br>
+                <br>
+                <table class="table">
+                    <tr>
+                        <th><h5>Items: <strong>3</strong></h5></th>
+                        <th><h5>Total: <strong>$34.000</strong></h5></th>
+                        <th>
+                            <a class="btn btn-success" style="float:right; margin:5px;" href="{% url 'checkout' %}">Pagar</a>
+                        </th>
+                    </tr>
+                </table>
+            </div>
+            <br>
+            <div class="box-element">
+                <div class="cart-row">
+                    <div style="flex: 2;"></div>
+                    <div style="flex: 2;"><strong>Producto</strong></div>
+                    <div style="flex: 1;"><strong>Precio</strong></div>
+                    <div style="flex: 1;"><strong>Cantidad</strong></div>
+                    <div style="flex: 1;"><strong>Total</strong> </div>
+                </div>
+
+                <div class="cart-row">
+                    <div style="flex: 2;"><img class="row-image" src="{% static 'images/640x360.png'%}" alt="product"></div>
+                    <div style="flex: 2;"><p>Producto 1</p></div>
+                    <div style="flex: 1;"><p>$20.000</p></div>
+                    <div style="flex: 1;">
+                        <p class="quantity">2</p>
+                        <div class="quantity">
+                            <img class="chg-quantity" src="{% static 'images/up-arrow.png' %}" alt="up-arrow">
+                            <img class="chg-quantity" src="{% static 'images/down-arrow.png' %}" alt="down-arrow">
+                        </div>
+                    </div>
+                    <div style="flex: 1;">Total</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 {% endblock content %}
 
