--- a/apps/shoppingcart/templates/checkout.html
+++ b/apps/shoppingcart/templates/checkout.html
@@ -1,5 +1,58 @@
 {% extends 'main.html' %}
 {% load static %}
 {% block content %}
-    <h3>checkout</h3>
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="box-element" id="form-wrapper">
+                <form id="form" action="">
+                    <div id="user-info">
+                        <div class="form-field">
+                            <input required class="form-control" type="text" name="name" placeholder="Nombre...">
+                        </div>
+                        <div class="form-field">
+                            <input required class="form-control" type="text" name="email" placeholder="Correo...">
+                        </div>
+                    </div>
+                    <div id="shipping-info">
+                        <div class="form-field">
+                            <input required class="form-control" type="text" name="adress" placeholder="Direccion...">
+                        </div>
+                        <div class="form-field">
+                            <input required class="form-control" type="text" name="city" placeholder="Ciudad...">
+                        </div>
+                        <div class="form-field">
+                            <input required class="form-control" type="text" name="state" placeholder="Estado/Provincia...">
+                        </div>
+                        <div class="form-field">
+                            <input required class="form-control" type="text" name="zipcode" placeholder="Codigo Postal...">
+                        </div>
+                    </div>
+                    <hr>
+                    <input id="form-button" class="btn btn-success btn-block" type="submit" value="Continuar">
+                </form>
+            </div>
+
+            <br>
+            <div class="box-element hidden" id="payment-info">
+                <small>Opciones de pago</small>
+            </div>
+        </div>
+        
+        <div class="col-lg-6">
+            <div class="box-element">
+                <a class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; Regresar al carrito</a>
+                <hr>
+                <h3>Resumen</h3>
+                <hr>
+                <div class="cart-row">
+                    <div style="flex: 2;"><img class="row-image" src="{% static 'images/640x360.png'%}" alt="product"></div>
+                    <div style="flex: 2;"><p>Producto 1</p></div>
+                    <div style="flex: 1;"><p>$20.000</p></div>
+                    <div style="flex: 1;"><p>2</p></div>
+                </div>
+                <h5>Items: 2</h5>
+                <h5>Total: 4</h5>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
