--- a/apps/shop/templates/store.html
+++ b/apps/shop/templates/store.html
@@ -2,36 +2,17 @@
 {% load static %}
 {% block content %}
     <div class="row">
+        {% for product in products %}
         <div class="col-lg-4">
             <img class="thumbnail" src="{% static 'images/640x360.png' %}" alt="">
             <div class="box-element product">
-                <h6><strong>Product</strong></h6>
+                <h6><strong>{{product.name}}</strong></h6>
                 <hr>
                 <button class="btn btn-outline-secondary add-btn">Agregar al Carrito</button>
                 <a class="btn btn-outline-success" href="#">Ver</a>
-                <h4 style="display: inline-block;float: right;">$19.900</h4>
+                <h4 style="display: inline-block;float: right;"><strong>${{product.price|floatformat:0}}</strong></h4>
             </div>
         </div>
-        <div class="col-lg-4">
-            <img class="thumbnail" src="{% static 'images/640x360.png' %}" alt="">
-            <div class="box-element product">
-                <h6><strong>Product</strong></h6>
-                <hr>
-                <button class="btn btn-outline-secondary add-btn">Agregar al Carrito</button>
-                <a class="btn btn-outline-success" href="#">Ver</a>
-                <h4 style="display: inline-block;float: right;">$19.900</h4>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <img class="thumbnail" src="{% static 'images/640x360.png' %}" alt="">
-            <div class="box-element product">
-                <h6><strong>Product</strong></h6>
-                <hr>
-                <button class="btn btn-outline-secondary add-btn">Agregar al Carrito</button>
-                <a class="btn btn-outline-success" href="#">Ver</a>
-                <h4 style="display: inline-block;float: right;">$19.900</h4>
-            </div>
-        </div>
-        
+        {% endfor %}
     </div>
 {% endblock content %}
