--- a/apps/shoppingcart/templates/checkout.html
+++ b/apps/shoppingcart/templates/checkout.html
@@ -44,14 +44,16 @@
                 <hr>
                 <h3>Resumen</h3>
                 <hr>
+                {% for item in items %}
                 <div class="cart-row">
-                    <div style="flex: 2;"><img class="row-image" src="{% static 'images/640x360.png'%}" alt="product"></div>
-                    <div style="flex: 2;"><p>Producto 1</p></div>
-                    <div style="flex: 1;"><p>$20.000</p></div>
-                    <div style="flex: 1;"><p>2</p></div>
+                    <div style="flex: 2;"><img class="row-image" src="{{ item.product.imageURL }}" alt="product"></div>
+                    <div style="flex: 2;"><p>{{item.product.name}}</p></div>
+                    <div style="flex: 1;"><p>${{item.product.price}}</p></div>
+                    <div style="flex: 1;"><p>{{item.quantity}}</p></div>
                 </div>
-                <h5>Items: 2</h5>
-                <h5>Total: 4</h5>
+                {% endfor %}
+                <h5>Items: {{ order.get_cart_items }}</h5>
+                <h5>Total: {{ order.get_cart_total }}</h5>
             </div>
         </div>
     </div>
