--- a/apps/shop/templates/store.html
+++ b/apps/shop/templates/store.html
@@ -8,7 +8,7 @@
             <div class="box-element product">
                 <h6><strong>{{product.name}}</strong></h6>
                 <hr>
-                <button class="btn btn-outline-secondary add-btn">Agregar al Carrito</button>
+                <button data-product="{{product.id}}" data-action="add" class="btn btn-outline-secondary add-btn update-cart">Agregar al Carrito</button>
                 <a class="btn btn-outline-success" href="#">Ver</a>
                 <h4 style="display: inline-block;float: right;"><strong>${{product.price|floatformat:0}}</strong></h4>
             </div>
