--- a/apps/shop/templates/main.html
+++ b/apps/shop/templates/main.html
@@ -95,7 +95,7 @@
               alt="cart"
             />
           </a>
-          <p id="cart-total">0</p>
+          <p id="cart-total">{{qty}}</p>
         </div>
       </div>
     </nav>
