--- a/apps/shoppingcart/templates/cart.html
+++ b/apps/shoppingcart/templates/cart.html
@@ -35,8 +35,8 @@
                     <div style="flex: 1;">
                         <p class="quantity">{{item.quantity}}</p>
                         <div class="quantity">
-                            <img class="chg-quantity" src="{% static 'images/up-arrow.png' %}" alt="up-arrow">
-                            <img class="chg-quantity" src="{% static 'images/down-arrow.png' %}" alt="down-arrow">
+                            <img data-product="{{ item.product.id}}" data-action="add" class="chg-quantity update-cart" src="{% static 'images/up-arrow.png' %}" alt="up-arrow">
+                            <img data-product="{{ item.product.id}}" data-action="remove" class="chg-quantity update-cart" src="{% static 'images/down-arrow.png' %}" alt="down-arrow">
                         </div>
                     </div>
                     <div style="flex: 1;">Total</div>
