user registration implemented, login and register button added

--- a/apps/shop/templates/main.html
+++ b/apps/shop/templates/main.html
@@ -87,7 +87,8 @@
           </ul>
         </div>
         <div class="form-inline my-2 my-lg-0">
-          <a href="#" class="btn btn-warning">Login</a>
+          <a href="{% url 'login' %}" class="btn btn-warning">Login</a>
+          <a href="{% url 'register' %}" class="btn btn-danger">Registrarse</a>
           <a href="{% url 'cart' %}">
             <img
               id="cart-icon"
@@ -97,6 +98,7 @@
           </a>
           <p id="cart-total">{{qty}}</p>
         </div>
+        
       </div>
     </nav>
 
