--- a/apps/usermanagement/templates/signup.html
+++ b/apps/usermanagement/templates/signup.html
@@ -1,5 +1,17 @@
 {% extends 'main.html' %}
 {% load static %}
 {% block content %}
-    <h3>signup</h3>
+{% load crispy_forms_tags %}         
+
+    <!--Register--> 
+    <div class="container py-5">
+        <h1>Registro</h1>
+        <form method="POST">
+            {% csrf_token %}
+            {{ register_form|crispy }}                    
+            <button class="btn btn-primary" type="submit">Registrar</button>
+        </form>
+        <p class="text-center">Si ya tienes una cuenta, <a href="/login">ingresa</a></p>
+    </div>
+
 {% endblock content %}
