--- a/static/css/main.css
+++ b/static/css/main.css
@@ -30,7 +30,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 #cart-icon{
-	width:25px;
+	width:50px;
 	display: inline-block;
 	margin-left: 15px;
 }
@@ -96,4 +96,14 @@ h1,h2,h3,h4,h5,h6{
 
 .hidden{
 	display: none!important;
+}
+
+.cart-wrapper{
+	position: relative;
+}
+
+#cart-total{
+	position: absolute;
+	bottom:15px;
+	left:55px;
 }
