--- a/apps/shop/templates/main.html
+++ b/apps/shop/templates/main.html
@@ -81,24 +81,30 @@
                 class="nav-link active"
                 aria-current="page"
                 href="{%url 'store' %}"
-                ><h2 style="color: white"><strong>Oasis' Dinks</strong></h2></a
+                ><h2 style="color: white"><strong>Oasis' Drinks</strong></h2></a
               >
             </li>
           </ul>
         </div>
-        <div class="form-inline my-2 my-lg-0">
+        <div class="form-inline my-0 my-lg-0 mx-5" style="padding-top: 15px">
+          {% if not request.user.is_authenticated %}
           <a href="{% url 'login' %}" class="btn btn-warning">Login</a>
           <a href="{% url 'register' %}" class="btn btn-danger">Registrarse</a>
-          <a href="{% url 'cart' %}">
-            <img
-              id="cart-icon"
-              src="{% static 'images/cart.png' %}"
-              alt="cart"
-            />
-          </a>
-          <p id="cart-total">{{qty}}</p>
+          {% else %}
+          <h4 style="color: white; display: inline; margin-right:20px;">Bienvenido, {{request.user}}!</h4>  
+          <a href="{% url 'logout' %}" class="btn btn-danger">Salir</a>
+          <div class="cart-wrapper">
+            <a href="{% url 'cart' %}">
+              <img
+                id="cart-icon"
+                src="{% static 'images/shopping-cart.png' %}"
+                alt="cart"
+              />
+            </a>
+            <p id="cart-total">{{qty}}</p>
+          </div>
+          {% endif %}
         </div>
-        
       </div>
     </nav>
 
